fix: Font size too big

--- a/src/components/GeoLocationInformation/styles.module.scss
+++ b/src/components/GeoLocationInformation/styles.module.scss
@@ -28,12 +28,12 @@
     color: $DarkGray;
     text-transform: uppercase;
     margin-block: 0;
-    font-size: 1.4rem;
+    font-size: 1.2rem;
     letter-spacing: 0.2rem;
   }
 
   span {
-    font-size: 3rem;
+    font-size: 2.5rem;
     font-weight: 500;
   }
 }
@@ -103,10 +103,10 @@
 
   .infoContainer {
     h1 {
-      font-size: 1.4rem;
+      font-size: 1rem;
     }
     span {
-      font-size: 2.8rem;
+      font-size: 2.2rem;
     }
   }
 
